# todo-app-example

./: README.md  docker-compose.yml  todo-app.code-workspace
app-backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  entrypoint.sh  justfile  pyproject.toml
app-backend/app/: config.py  database.py  main.py
app-backend/app/models/: __init__.py  todolist.py
app-backend/app/services/todolist/: router.py
app-backend/app/services/todolist/categories/: controllers.py  dtos.py  repositories.py
app-backend/app/services/todolist/todos/: controllers.py  dtos.py  repositories.py
app-backend/migrations/: env.py
app-backend/migrations/versions/: 20250708_1032-46c7b7877418_init.py
app-frontend/: .dockerignore  Dockerfile  README.md  components.d.ts  eslint.config.mjs  package.json  tailwind.config.js  tailwind.config.mjs  tsconfig.app.json  vite.config.ts
app-frontend/src/: App.vue  main.ts
app-frontend/src/api/: index.ts  todolist.ts
app-frontend/src/assets/: main.css
app-frontend/src/components/: CategoryForm.vue  CategorySection.vue  EmptyState.vue  TodoFilters.vue  TodoForm.vue  TodoItem.vue  TodoList.vue  TodoStatsCards.vue
app-frontend/src/components/base/: BaseHeader.vue
app-frontend/src/interfaces/: todolist.ts
app-frontend/src/plugins/: primevue.ts
app-frontend/src/stores/: category.ts  todo.ts  todos.ts
app-frontend/src/views/: HomeView.vue
