[project]
name = "app-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "litestar[sqlalchemy,standard,structlog]>=2.16.0",
    "psycopg>=3.2.9",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "just-bin>=1.40.0",
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["F", "W", "E", "I", "A", "B", "N"]
